[gd_scene load_steps=11 format=2]

[ext_resource path="res://Klas.gd" type="Script" id=1]
[ext_resource path="res://Textures/Chars/Klas/Klas_stand_0.png" type="Texture" id=2]
[ext_resource path="res://Textures/Chars/Klas/Klas_run_1.png" type="Texture" id=3]
[ext_resource path="res://Textures/Chars/Klas/Klas_run_2.png" type="Texture" id=4]
[ext_resource path="res://Textures/Chars/Klas/Klas_run_0.png" type="Texture" id=5]
[ext_resource path="res://Textures/Chars/Klas/Klas_stand_4.png" type="Texture" id=6]
[ext_resource path="res://Textures/Chars/Klas/Klas_stand_5.png" type="Texture" id=7]
[ext_resource path="res://Textures/Chars/Klas/Klas_still_0.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "side",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Front",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 19.1492
height = 43.5232

[node name="Klas" type="KinematicBody2D"]

position = Vector2( 19.0193, 3.90139 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Run"
frame = 6
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.970596, -5.50006 )
shape = SubResource( 2 )

[node name="Right_pos" type="Position2D" parent="." index="2"]

position = Vector2( 83.7408, -32.6742 )
scale = Vector2( 1.0681, 1 )

[node name="Left_pos" type="Position2D" parent="." index="3"]

position = Vector2( -72.2002, -31.5987 )
scale = Vector2( 1.0681, 1 )

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


